force-app/main/default/objects/Route_Delay__c/Route_Delay__c.object-meta.xml
<CustomObject>
    <label>Route Delay</label>
    <nameField>
        <displayFormat>Delay{0000}</displayFormat>
        <label>Delay Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Delays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>