force-app/main/default/objects/Route_Delay__c/fields/Broadcast_Num__c.field-meta.xml
<CustomField>
        <fullName>Broadcast_Num__c</fullName>
        <label>Broadcast Num</label>
        <length>9</length>
        <type>Text</type>
    </CustomField>