force-app/main/default/objects/Route_Delay__c/fields/Code__c.field-meta.xml
<CustomField>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>