force-app/main/default/objects/Route_Delay__c/fields/Date_From__c.field-meta.xml
<CustomField>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>DateTime</type>
    </CustomField>