force-app/main/default/objects/Route_Delay__c/fields/Date_Until__c.field-meta.xml
<CustomField>
        <fullName>Date_Until__c</fullName>
        <label>Date Until</label>
        <type>Date</type>
    </CustomField>