force-app/main/default/objects/Route_Delay__c/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>