force-app/main/default/objects/Route_Delay__c/fields/District_From__c.field-meta.xml
<CustomField>
        <fullName>District_From__c</fullName>
        <label>District From</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>