force-app/main/default/objects/Route_Delay__c/fields/District_Match__c.field-meta.xml
<CustomField>
        <fullName>District_Match__c</fullName>
        <description>District From and District Until match flag</description>
        <formula>IF(isBlank(District_From__c),false,
IF(isBlank(District_Until__c),false,
IF(District_From__c == District_Until__c, true, false)))</formula>
        <inlineHelpText>District From and District Until match flag</inlineHelpText>
        <label>District Match</label>
        <type>Checkbox</type>
    </CustomField>