force-app/main/default/objects/Route_Delay__c/fields/District_Until__c.field-meta.xml
<CustomField>
        <fullName>District_Until__c</fullName>
        <label>District Until</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>