force-app/main/default/objects/Route_Delay__c/fields/Memo__c.field-meta.xml
<CustomField>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>