force-app/main/default/objects/Route_Delay__c/fields/Route_From__c.field-meta.xml
<CustomField>
        <fullName>Route_From__c</fullName>
        <label>Route From</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>