force-app/main/default/objects/Route_Delay__c/fields/Route_Until__c.field-meta.xml
<CustomField>
        <fullName>Route_Until__c</fullName>
        <label>Route Until</label>
        <length>8</length>
        <type>Text</type>
    </CustomField>