force-app/main/default/objects/Route_Delay__c/fields/Show_CSR__c.field-meta.xml
<CustomField>
        <fullName>Show_CSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show CSR</label>
        <type>Checkbox</type>
    </CustomField>